--- a/style.css
+++ b/style.css
@@ -86,11 +86,8 @@ button {
   transform: translateX(-50%) translateY(10px);
 }
 
-
-
-
-
-
-
-
-
+@media only screen and (max-width: 480px){
+  h1{
+    font-size: 1.5rem;
+  }
+}
